# minimal-python-template

./: .superpowers  Justfile  README.md  pyproject.toml  pytest.ini
.github/: copilot-error-handling-instructions.md  copilot-git-workflow-instructions.md  copilot-instructions copy.md  copilot-instructions.md  copilot-project-patterns-instructions.md  copilot-testing-instructions.md  python-code-style-instructions.md  super_powers.md
.github/workflows/: copilot-setup-steps.yml
docs/aigc/: 00_overview.md  01_maze_generation.md  02_dijkstra_policy.md  03_dataset_spec.md  04_training_loop.md  05_validation_and_runbook.md
src/ml_maze/: __init__.py  maze_generator.py
tests/: test_maze_generator.py
